<resources>
    <string name="app_name">Space Delivery</string>

    <string name="nav_create_ship">Create Ship</string>
    <string name="nav_home">Home</string>
    <string name="nav_stations">Stations</string>
    <string name="nav_favorites">Favorites</string>

    <!-- Create Ship -->
    <string name="create_ship_distribute_points">Dağıtılacak Puan:</string>
    <string name="create_ship_name_hint">Geminin İsmi</string>
    <string name="create_ship_durability">Dayanıklılık</string>
    <string name="create_ship_speed">Hız</string>
    <string name="create_ship_capacity">Kapasite</string>
    <string name="create_ship_note">* Özelliklerden hiçbiri 0 (Sıfır) olamaz.</string>
    <string name="create_ship_continue_button">Devam Et</string>
    <string name="create_ship_error">Lütfen bilgileri kontrol ediniz.</string>
    <string name="create_ship_has_game_dialog_title">Bitmemiş oyun bulundu</string>
    <string name="create_ship_has_game_dialog_description">Henüz tamamlanmamış bir oyununuz var. Devam etmek ister misiniz?</string>
    <string name="create_ship_has_game_dialog_continue_button">Devam Et</string>
    <string name="create_ship_has_game_dialog_cancel_button">İptal</string>

    <!-- Home -->
    <string name="home_stations">İstasyonlar</string>
    <string name="home_favorites">Favoriler</string>

    <!-- Stations -->
    <string name="stations_ugs">UGS: %1$d</string>
    <string name="stations_eus">EUS: %1$d</string>
    <string name="stations_ds">DS: %1$d</string>
    <string name="stations_capacity_stock">%1$d/%2$d</string>
    <string name="stations_station_eus">%1$d EUS</string>
    <string name="stations_travel">Travel</string>
    <string name="stations_enough_time_dialog_title">Yeterli zaman kalmadı</string>
    <string name="stations_enough_time_dialog_description">Bu gezegene seyahat edebilmeniz için gerekli süre kalmadı.</string>
    <string name="stations_enough_time_dialog_ok_button">Tamam</string>

    <string name="stations_game_over_dialog_title">Oyun bitti!</string>
    <string name="stations_game_over_dialog_spacesuit_over_message">Yeterli uzay giysiniz kalmadı.</string>
    <string name="stations_game_over_dialog_eus_over_message">Yeterli evrensel uzay süreniz kalmadı.</string>
    <string name="stations_game_over_dialog_damage_capacity_over_message">Yeterli hasar kapasiteniz kalmadı.</string>
    <string name="stations_game_over_dialog_game_over_message">Tebrikler! Uzay giysilerinin hepsini dağıtmayı başardınız.</string>
    <string name="stations_game_over_dialog_ok_button">Kapat</string>

    <!-- Favorites -->
    <string name="favorites_title">Favoriler</string>

    
</resources>